# indoo

./: .gitignore  .odoo-lab.example.toml  2026-03-23-indoo-improvements.md  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LEARNING_AND_SHARING.md  PLAN.md  README.md  pyproject.toml
.steward/tool-intents/: indoo.json
docs/adr/: 0001-rpc-first-cli.md  0002-global-install-via-uv-tool.md  0003-one-config-path-per-platform.md  0004-doctor-as-entry-point.md  0005-safe-defaults-for-list.md  0006-domain-filter-for-list.md  0007-error-messages-include-example.md  0008-json-only-output.md  0009-inspect-only.md  0010-help-over-describe.md  0011-odoo-command-names.md  README.md
scripts/: example_depends_check.py
src/indoo/: __init__.py  cli.py  client.py  config.py  output.py  schema.py  validation.py
src/odoo_lab/: cli.py  client.py
tests/: test_cli.py  test_client.py  test_config.py
